test/should-fail/absent-required-keyword/k1.dk
klass k1
{
  noexport void***** arg5-default = nullptr;
  noexport void****** arg6-default = nullptr;

  method init(object-t self, void* arg1, void** arg2, void*** #arg3, void**** #arg4, void***** arg5 : arg5-default, void****** arg6 : arg6-default) -> object-t {
    self = $init(super);
    return self;
  }
}


